--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,8 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <p><a href="/question">Comience a jugar</a></p>
+    
   </body>
 </html>
