--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-
-    <p><a href="/question">Comience a jugar</a></p>
-    
-  </body>
-</html>
+<p>
+El portal donde podrá crear sus propios juegos!
+</p>
